assignments/PA4/tests/bad/bad20.cl
class M {
    main(x:Int):Int{1};
};
class Main inherits M {
    main():Int{1};
};
